# fpchat

./: LICENSE  README.md  fpchat.cabal  run.sh
app/: Main.hs
src/Network/: Chat.hs
src/Network/Chat/: Commands.hs  Config.hs  Parsers.hs  Server.hs  Types.hs
test/Network/: ChatSpec.hs
