name:                fpchat
version:             0.1.0.0
synopsis:            Haskell version of NacionLumpen's chat exercise
description:         Please see README.md
homepage:            https://github.com/anler/fpchat#readme
license:             BSD3
license-file:        LICENSE
author:              Anler Hernández Peral
maintainer:          inbox+fpchat@anler.me
copyright:           2017 Anler Hernández Peral
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Chat
                     , Network.Chat.Parsers
                     , Network.Chat.Commands
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , bytestring
  default-language:    Haskell2010

executable fpchat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fpchat
  default-language:    Haskell2010

test-suite fpchat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fpchat
                     , hspec
                     , parsec
  other-modules:       Network.ChatSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/anler/fpchat
